--- a/.github/workflows/builder.yml
+++ b/.github/workflows/builder.yml
@@ -3,6 +3,7 @@ name: Generic System Image Builder
 on:
   watch:
     types: [started]
+  workflow_dispatch:
     
 env:
   ROM_LINK: your rom's direct link
