--- a/.github/workflows/builder.yml
+++ b/.github/workflows/builder.yml
@@ -6,7 +6,7 @@ on:
   workflow_dispatch:
     
 env:
-  ROM_LINK: your rom's direct link
+#  ROM_LINK: your rom's direct link
   ROM_LINK: https://bigota.d.miui.com/V12.5.8.0.RKZCNXM/miui_ENUMA_V12.5.8.0.RKZCNXM_55786821db_11.0.zip
   ROM_TYPE: Generic
   BUILD_AB: true
